ansible/roles/app_setup_kubernetes/templates/gateway-and-routing.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: events-organiser-gateway-cls
spec:
  controllerName: example.com/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gateway
  namespace: events-organiser
spec:
  gatewayClassName: events-organiser-gateway-cls
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-router
  namespace: events-organiser
spec:
  parentRefs:
  - name: http-gateway
    namespace: events-organiser
  hostnames:
  - "www.11072100.xyz" # TODO: jinja2 template
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/events
    backendRefs:
    - name: events-svc
      port: 80
